--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -1,30 +1,88 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ プライバシーポリシー ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
 .privacy_def {
-  padding: 88px 0 47px;
+  padding: 30px 0 20px;
   text-align: center;
-  font: normal normal bold 16px/32px Noto Sans CJK JP;
+  font: normal normal bold 14px/24px Noto Sans CJK JP;
   letter-spacing: 0.8px;
   color: #2E2E2E;
+  width: 300px;
+  margin: auto;
+}
+
+.privacy_def br {
+  display: none;
+}
+
+@media (min-width:770px) {
+  .privacy_def {
+    width: 100%;
+    padding: 40px 0 30px;
+    font: normal normal bold 14px/32px Noto Sans CJK JP;
+  }
+  .privacy_def br {
+    display: block;
+  }
+}
+
+@media (min-width:1050px) {
+  .privacy_def {
+    font-size: 16px;
+    padding: 88px 0 47px;
+  }
 }
 
 .privacy_details {
-  padding: 64px 85px 65px 90px;
   background-color: #E7E7E7;
-  width: 980px;
-  margin: 0 auto 95px;
+  width: 300px;
+  margin: 0 auto 50px;
+  padding: 15px 20px 15px 20px;
+}
+
+@media (min-width:770px) {
+  .privacy_details {
+    margin-bottom: 95px;
+    width: 600px;
+    padding: 30px 40px 30px 40px;
+  }
+}
+
+@media (min-width:1050px) {
+  .privacy_details {
+    width: 980px;
+    padding: 64px 85px 65px 90px;
+  }
 }
 
 .privacy_details h3 {
-  font: normal normal bold 16px/32px Noto Sans CJK JP;
+  font: normal normal bold 14px/32px Noto Sans CJK JP;
   letter-spacing: 0.8px;
   color: #2E2E2E;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
+}
+
+@media (min-width:770px) {
+  .privacy_details h3 {
+    margin-bottom: 18px;
+  }
 }
 
 .privacy_explain {
-  width: 805px;
-  margin-bottom: 22px;
+  width: 260px;
+  margin-bottom: 18px;
+}
+
+@media (min-width:770px) {
+  .privacy_explain {
+    width: 520px;
+    margin-bottom: 22px;
+  }
+}
+
+@media (min-width:1050px) {
+  .privacy_explain {
+    width: 805px;
+  }
 }
 
 .privacy_details p, .privacy_details li {
