--- a/css/company.css
+++ b/css/company.css
@@ -1,17 +1,53 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 会社概要 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
 .company_informatino {
-  margin-top: 97px;
+  margin-top: 50px;
+}
+
+@media (min-width:770px) {
+  .company_informatino {
+    margin-top: 70px;
+  }
+}
+
+@media (min-width:1050px) {
+  .company_informatino {
+    margin-top: 97px;
+  }
 }
 
 .company_informatino ul {
   margin: auto;
-  width: 978.93px;
+  width: 300px;
+}
+
+@media (min-width:770px) {
+  .company_informatino ul {
+    width: 600px;
+  }
+}
+
+@media (min-width:1050px) {
+  .company_informatino ul {
+    width: 978.93px;
+  }
 }
 
 .company_informatino hr {
   border: 1px solid #E7E7E7;
-  width: 978.93px;
+  width: 300px;
+}
+
+@media (min-width:770px) {
+  .company_informatino hr {
+    width: 600px;
+  }
+}
+
+@media (min-width:1050px) {
+  .company_informatino hr {
+    width: 978.93px;
+  }
 }
 
 .company_informatino_row {
@@ -21,16 +57,38 @@
 }
 
 .information_title {
-  font: normal normal bold 16px Noto Sans CJK JP;
+  font: normal normal bold 12px Noto Sans CJK JP;
   color: #2E2E2E;
   position: absolute;
 }
 
+@media (min-width:770px) {
+  .information_title {
+    font-size: 16px;
+  }
+}
+
 .information_details {
-  font: normal normal normal 16px Noto Sans CJK JP;
+  font: normal normal normal 12px Noto Sans CJK JP;
   color: #2E2E2E;
   position: relative;
-  left: 252px;
+  left: 110px;
+  width: 180px;
+}
+
+@media (min-width:770px) {
+  .information_details {
+    font-size: 16px;
+    left: 180px;
+    width: 400px;
+  }
+}
+
+@media (min-width:1050px) {
+  .information_details {
+    left: 252px;
+    width: 100%;
+  }
 }
 
 .information_details p {
@@ -40,4 +98,23 @@
 .map {
   text-align: center;
   padding: 62px 0;
+}
+
+.map iframe {
+  width: 300px;
+  height: 250px;
+}
+
+@media (min-width:770px) {
+  .map iframe {
+    width: 600px;
+    height: 250px;
+  }
+}
+
+@media (min-width:1050px) {
+  .map iframe {
+    width: 980px;
+    height: 305px;
+  }
 }
