--- a/css/archive.css
+++ b/css/archive.css
@@ -1,14 +1,10 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ TAM日記 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 /*------------------------------------ 日記一覧 --------------------------------------*/
 
-.subtitle {
-  margin-bottom: 97px;
-}
-
 .diary_main {
 width: 979.5px;
 text-align: center;
-margin: 0 auto;
+margin: 97px auto 0;
 padding-bottom: 95.5px;
 }
 
