--- a/css/archive.css
+++ b/css/archive.css
@@ -1,11 +1,26 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ TAM日記 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+
 /*------------------------------------ 日記一覧 --------------------------------------*/
 
 .diary_main {
-width: 979.5px;
-text-align: center;
-margin: 97px auto 0;
-padding-bottom: 95.5px;
+  width: 300px;
+  text-align: center;
+  margin: 30px auto 25px;
+  border-bottom: solid 1px #E7E7E7;
+}
+
+@media (min-width:770px) {
+  .diary_main {
+    width: 600px;
+    margin: 60px auto 55px;
+  }
+}
+
+@media (min-width:1050px) {
+  .diary_main {
+    width: 979.5px;
+    margin: 97px auto 95px;
+  }
 }
 
 .post_item {
@@ -15,14 +30,18 @@ padding-bottom: 95.5px;
   display: flex;
   font-family: 'Noto Sans JP', sans-serif;
   border-top: solid 1px #E7E7E7;
-  border-bottom: solid 1px #E7E7E7;
+
 }
 
 .post_item p {
-margin-right: 14px;
-font-family: 'Noto Sans JP', sans-serif;
-font-size: 16px;
-padding-top: 38px;
+  margin-right: 14px;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 16px;
+  padding-top: 38px;
+}
+
+.blog_date {
+  white-space: nowrap;
 }
 
 .blog_category {
@@ -30,15 +49,16 @@ padding-top: 38px;
   margin-top: 28px;
   margin-right: 30px;
   background-color: #E7E7E7;
-  width: 180px;
+  width: 300px;
   height: 40px;
+  white-space: nowrap;
 }
 
 .blog_category a {
   line-height: 40px;
   color: #FF5555;
   font-weight: bold;
-} 
+}
 
 .blog_title {
   text-align: left;
@@ -56,4 +76,45 @@ padding-top: 38px;
   color: #2E2E2E;
 }
 
-/*    */
+/*  ページネーション  */
+.wp-pagenavi {
+  text-align: center;
+  margin-bottom: 96px;
+  font: normal normal normal 20px/29px Noto Sans CJK JP;
+  color: #333333;
+}
+
+.wp-pagenavi a {
+  color: #333333;
+}
+.page, .extend {
+  border: none;
+  margin: 0 80px 0 0;
+  padding: 0;
+}
+
+.current {
+  border: none;
+  margin: 0 80px 0 0;
+  padding: 12px 21px 14px;
+  background-color: #3D3D3D;
+  color: #FFFFFF;;
+  font-weight: normal;
+}
+
+.previouspostslink, .nextpostslink {
+  color: #747474;
+  font-weight: bold;
+  opacity: 0.32;
+}
+
+.previouspostslink {
+  margin-right: 160px;
+  border: none;
+  font-size: 28px;
+}
+
+.nextpostslink {
+  border: none;
+  font-size: 28px;
+}
