--- a/css/archive.css
+++ b/css/archive.css
@@ -3,7 +3,7 @@
 /*------------------------------------ 日記一覧 --------------------------------------*/
 
 .diary_main {
-  width: 300px;
+  width: 90%;
   text-align: center;
   margin: 30px auto 25px;
   border-bottom: solid 1px #E7E7E7;
@@ -11,7 +11,7 @@
 
 @media (min-width:770px) {
   .diary_main {
-    width: 600px;
+    width: 80%;
     margin: 60px auto 55px;
   }
 }
@@ -25,19 +25,35 @@
 
 .post_item {
   width: 100%;
-  height: 96px;
-  padding-left: 15px;
+  height: 70px;
+  padding-left: 0px;
   display: flex;
   font-family: 'Noto Sans JP', sans-serif;
   border-top: solid 1px #E7E7E7;
+}
 
+@media (min-width:770px) {
+  .post_item {
+    width: 100%;
+    height: 96px;
+    padding-left: 15px;
+  }
 }
 
 .post_item p {
-  margin-right: 14px;
+  margin-right: 10px;
   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 16px;
-  padding-top: 38px;
+  font-size: 12px;
+  padding-top: 30px;
+}
+
+@media (min-width:770px) {
+  .post_item p {
+    margin-right: 14px;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 16px;
+    padding-top: 38px;
+  }
 }
 
 .blog_date {
@@ -46,34 +62,68 @@
 
 .blog_category {
   display: inline-block;
-  margin-top: 28px;
-  margin-right: 30px;
+  margin-top: 22px;
+  margin-right: 15px;
   background-color: #E7E7E7;
-  width: 300px;
-  height: 40px;
+  width: 100px;
+  height: 30px;
   white-space: nowrap;
 }
 
+@media (min-width:770px) {
+  .blog_category {
+    margin-top: 28px;
+    margin-right: 30px;
+    width: 180px;
+    height: 40px;
+  }
+}
+
 .blog_category a {
-  line-height: 40px;
+  line-height: 30px;
   color: #FF5555;
+  font-size: 12px;
   font-weight: bold;
+}
+
+@media (min-width:770px) {
+  .blog_category a {
+    font-size: 16px;
+    line-height: 40px;
+  }
 }
 
 .blog_title {
   text-align: left;
-  width: 600px;
+  width: 62.2%;
   display: inline-block;
-  margin-top: 28px;
-  height: 40px;
+  margin-top: 22px;
+  height: 30px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
 
+@media (min-width:770px) {
+  .blog_title {
+    width: 600px;
+    margin-top: 28px;
+    height: 40px;
+  }
+}
+
 .blog_title a {
-  line-height: 40px;
+  font-size: 12px;
+  line-height: 30px;
   color: #2E2E2E;
+}
+
+@media (min-width:770px) {
+  .blog_title a {
+    font-size: 16px;
+    line-height: 40px;
+    color: #2E2E2E;
+  }
 }
 
 /*  ページネーション  */
@@ -117,4 +167,8 @@
 .nextpostslink {
   border: none;
   font-size: 28px;
+}
+
+.nextpostslink {
+  margin-left: 80px;
 }
